# bnb-chain-toolkit

./: .editorconfig  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  .releaserc.cjs  .windsurfrules  AGENTS.md  CHANGELOG.md  CITATION.cff  CNAME  CONTRIBUTING.md  Dockerfile  GEMINI.md  README.md  SECURITY.md  TODO.md  commit-push.sh  docker-compose.yml  eslint.config.js  humans.txt  index.html  llms-full.txt  llms.txt  meta.json  model-router.md  netlify.toml  nginx.conf  package-lock.json  package.json  postcss.config.js  server.json  tailwind.config.js  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  repository-metadata.json
.well-known/: ai-plugin.json
agent-runtime/: Dockerfile  README.md  docker-compose.yml  package-lock.json
api/: translate.ts
docs/: IDE_GUIDE.md  INNOVATION_LAB.md  PLAYGROUNDS.md  README.md  agents.md  architecture.md  awesome.md  defi-tools.md  examples.md  faq.md  getting-started.md  market-data.md  (+5 more)
erc8004-agents/sdks/rust/: Cargo.toml  README.md
erc8004-agents/sdks/rust/examples/: register.rs
erc8004-agents/sdks/rust/src/: chains.rs  client.rs  contracts.rs  identity.rs  lib.rs  reputation.rs  types.rs
market-data/crypto-news/examples/rust/: Cargo.toml  README.md  ai_features.rs  basic.rs  portfolio.rs  streaming.rs  trading.rs
market-data/crypto-news/sdk/rust/: Cargo.toml  README.md
market-data/crypto-news/sdk/rust/examples/: basic.rs  portfolio.rs  streaming.rs
market-data/crypto-news/sdk/rust/src/: lib.rs
wallets/ethereum-wallet-toolkit/ethereum-wallet-mcp/: README.md  pyproject.toml
wallets/ethereum-wallet-toolkit/ethereum-wallet-mcp/src/ethereum_wallet_mcp/: __init__.py  server.py
wallets/ethereum-wallet-toolkit/ethereum-wallet-mcp/src/ethereum_wallet_mcp/prompts/: __init__.py  signing_prompts.py  wallet_prompts.py
wallets/ethereum-wallet-toolkit/ethereum-wallet-mcp/src/ethereum_wallet_mcp/resources/: __init__.py  documentation.py  signing_resources.py
wallets/ethereum-wallet-toolkit/ethereum-wallet-mcp/src/ethereum_wallet_mcp/tools/: __init__.py  signing.py  typed_data.py  wallet_generation.py
wallets/ethereum-wallet-toolkit/ethereum-wallet-mcp/tests/: __init__.py  test_signing.py  test_typed_data.py  test_wallet_generation.py
wallets/ethereum-wallet-toolkit/keystore-mcp-server/: README.md  pyproject.toml
wallets/ethereum-wallet-toolkit/keystore-mcp-server/src/keystore_mcp/: __init__.py  __main__.py  server.py
wallets/ethereum-wallet-toolkit/keystore-mcp-server/src/keystore_mcp/crypto/: __init__.py  cipher.py  kdf.py  mac.py
wallets/ethereum-wallet-toolkit/keystore-mcp-server/src/keystore_mcp/prompts/: __init__.py  backup.py  migration.py  recovery.py
wallets/ethereum-wallet-toolkit/keystore-mcp-server/src/keystore_mcp/resources/: __init__.py  examples.py  security.py  specification.py
wallets/ethereum-wallet-toolkit/keystore-mcp-server/src/keystore_mcp/tools/: __init__.py  batch.py  decrypt.py  encrypt.py  file_ops.py  validation.py
wallets/ethereum-wallet-toolkit/keystore-mcp-server/src/keystore_mcp/utils/: __init__.py  file_utils.py  validation.py
wallets/ethereum-wallet-toolkit/keystore-mcp-server/tests/: __init__.py  conftest.py  test_decrypt.py  test_encrypt.py  test_file_ops.py  test_validation.py
wallets/ethereum-wallet-toolkit/signing-mcp-server/: README.md  pyproject.toml
wallets/ethereum-wallet-toolkit/signing-mcp-server/src/signing_mcp/: __init__.py  __main__.py  server.py
wallets/ethereum-wallet-toolkit/signing-mcp-server/src/signing_mcp/prompts/: __init__.py  message_workflow.py  permit_workflow.py  typed_data_workflow.py  verification_workflow.py
wallets/ethereum-wallet-toolkit/signing-mcp-server/src/signing_mcp/resources/: __init__.py  eip191.py  eip712.py  signature_formats.py  typed_data_templates.py
wallets/ethereum-wallet-toolkit/signing-mcp-server/src/signing_mcp/tools/: __init__.py  hash_signing.py  message_signing.py  signature_utils.py  typed_data.py
wallets/ethereum-wallet-toolkit/signing-mcp-server/tests/: __init__.py  test_hash_signing.py  test_message_signing.py  test_signature_utils.py  test_typed_data.py
wallets/ethereum-wallet-toolkit/transaction-mcp-server/: README.md  pyproject.toml
wallets/ethereum-wallet-toolkit/transaction-mcp-server/src/transaction_mcp/: __init__.py  __main__.py  server.py
wallets/ethereum-wallet-toolkit/transaction-mcp-server/src/transaction_mcp/prompts/: __init__.py  decode_workflow.py  gas_workflow.py  token_workflow.py  transfer_workflow.py
wallets/ethereum-wallet-toolkit/transaction-mcp-server/src/transaction_mcp/resources/: __init__.py  chain_ids.py  eip1559.py  gas_guide.py  transaction_types.py
wallets/ethereum-wallet-toolkit/transaction-mcp-server/src/transaction_mcp/tools/: __init__.py  building.py  decoding.py  encoding.py  gas.py  signing.py
wallets/ethereum-wallet-toolkit/transaction-mcp-server/tests/: __init__.py  conftest.py  test_building.py  test_decoding.py  test_encoding.py  test_gas.py  test_signing.py
wallets/ethereum-wallet-toolkit/validation-mcp-server/: README.md  pyproject.toml
wallets/ethereum-wallet-toolkit/validation-mcp-server/src/validation_mcp/: __init__.py  __main__.py  server.py
wallets/ethereum-wallet-toolkit/validation-mcp-server/src/validation_mcp/prompts/: __init__.py  encoding_helper.py  security_audit.py  validation_workflow.py
wallets/ethereum-wallet-toolkit/validation-mcp-server/src/validation_mcp/resources/: __init__.py  eip55.py  patterns.py  secp256k1.py  selectors_db.py
wallets/ethereum-wallet-toolkit/validation-mcp-server/src/validation_mcp/tools/: __init__.py  address_validation.py  checksum.py  derivation.py  hashing.py  hex_validation.py  key_validation.py  selectors.py  signature_validation.py  storage.py
wallets/ethereum-wallet-toolkit/validation-mcp-server/tests/: __init__.py  test_address_validation.py  test_checksum.py  test_derivation.py  test_hashing.py  test_hex_validation.py  test_key_validation.py  test_selectors.py  test_signature_validation.py  test_storage.py
(+5201 files in other folders)
