[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ethereum-wallet-mcp"
version = "1.0.0"
description = "MCP server for Ethereum wallet generation and HD wallet operations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "nirholas", email = "nirholas@users.noreply.github.com" }
]
keywords = ["ethereum", "wallet", "mcp", "hd-wallet", "bip39", "cryptocurrency"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "eth-account>=0.10.0",
    "eth-keys>=0.4.0",
    "eth-utils>=2.3.0",
    "pydantic>=2.0.0",
    "mnemonic>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[project.scripts]
ethereum-wallet-mcp = "ethereum_wallet_mcp.server:main"

[project.urls]
Homepage = "https://github.com/nirholas/ethereum-wallet-toolkit"
Documentation = "https://github.com/nirholas/ethereum-wallet-toolkit#readme"
Repository = "https://github.com/nirholas/ethereum-wallet-toolkit"
Issues = "https://github.com/nirholas/ethereum-wallet-toolkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ethereum_wallet_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
