[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keystore-mcp-server"
version = "1.0.0"
description = "MCP server for Ethereum keystore encryption, decryption, and management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "nirholas", email = "nirholas@users.noreply.github.com" }
]
keywords = ["ethereum", "keystore", "mcp", "encryption", "web3", "cryptocurrency"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "mcp>=1.0.0",
    "eth-account>=0.10.0",
    "eth-keyfile>=0.8.0",
    "eth-keys>=0.5.0",
    "eth-utils>=2.3.0",
    "pydantic>=2.0.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[project.scripts]
keystore-mcp-server = "keystore_mcp.server:main"

[project.urls]
Homepage = "https://github.com/nirholas/ethereum-wallet-toolkit"
Repository = "https://github.com/nirholas/ethereum-wallet-toolkit/tree/main/keystore-mcp-server"
Documentation = "https://github.com/nirholas/ethereum-wallet-toolkit/blob/main/keystore-mcp-server/README.md"

[tool.hatch.build.targets.wheel]
packages = ["src/keystore_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
