[project]
name = "signing-mcp-server"
version = "1.0.0"
description = "MCP Server for Ethereum message signing and EIP-712 typed data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "nirholas", email = "nirholas@users.noreply.github.com"}
]
keywords = [
    "ethereum",
    "mcp",
    "signing",
    "eip-191",
    "eip-712",
    "typed-data",
    "personal_sign",
    "message-signing"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "mcp>=1.0.0",
    "eth-account>=0.10.0",
    "eth-utils>=2.0.0",
    "eth-abi>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0"
]

[project.scripts]
signing-mcp-server = "signing_mcp.server:main"

[project.urls]
Homepage = "https://github.com/nirholas/ethereum-wallet-toolkit"
Repository = "https://github.com/nirholas/ethereum-wallet-toolkit/tree/main/signing-mcp-server"
Documentation = "https://github.com/nirholas/ethereum-wallet-toolkit/blob/main/signing-mcp-server/README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signing_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
